# machine-hash

./: Cargo.toml  LICENSE  build-all.sh  build.rs  readme.md
src/: error.rs  hardware_info.rs  main.rs
